# Proyecto2AED

./: CMakeLists.txt
src/: main.cpp
src/core/: busquedaIngenua.h  suffixTree.h  suffixTreeNode.h
src/loader/: textLoader.h  textNormalizer.h
src/ui/: app.h
